# amazon-kinesis-video-streams-stun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stunFilePaths.cmake
.github/workflows/: ci.yml
app/deserializer/: Makefile  deserializer.c
app/serializer/: Makefile  serializer.c
lib/source/: stun_deserializer.c  stun_endianness.c  stun_serializer.c
lib/source/include/: stun_data_types.h  stun_deserializer.h  stun_serializer.h
source/: stun_deserializer.c  stun_endianness.c  stun_serializer.c
source/include/: stun_data_types.h  stun_deserializer.h  stun_endianness.h  stun_serializer.h
test/coverity/: CMakeLists.txt  README.md
test/unit-test/: CMakeLists.txt  README.md  catch_assert.h  cmock_build.cmake
test/unit-test/cmock/: coverage.cmake  create_test.cmake  project.yml
test/unit-test/stun_deserializer/: stun_deserializer_utest.c  ut.cmake
test/unit-test/stun_serializer/: stun_serializer_utest.c  ut.cmake
